@@ -1,8 +1,10 @@
-CHANGES.txt - 2009-05-26
+CHANGES.txt - 2009-06-05
 ------------------------
 
 CHANGES IN CUPS V1.4rc1
 
+	- The PPD compiler crashed when both "Resolution" and "Group foo Option
+	  Resolution" were specified in the .drv file.
 	- The PPD compiler's #if/#elif/#else/#endif did not work for undefined
 	  variables (STR #3210)
 	- Static libraries could not be installed by a non-root user on systems
